[FIX] to_backend_theme: improve dropdown menu on mobile

--- a/to_backend_theme/static/src/scss/style.scss
+++ b/to_backend_theme/static/src/scss/style.scss
@@ -467,3 +467,13 @@ textarea, select, .o_form_view.o_form_editable .o_form_field_many2manytags,
 		}
 	}
 }
+
+@media (max-width: 767.98px) {
+	.o_main_navbar {
+		.show {
+			.dropdown-toggle {
+				background-color: #ffffff !important;
+			}
+		}
+	}
+}
